 # [#21172] •Article pagination display. Thanks Bill.
 # [#21389] Missing addition of css class "parent" to <li> tag for parent item in menu.
 # [#21369] New menu item - Metadata options - Show Page Heading. Thanks Bill.
 # [#21455] XML self closing syntax used on a div. Thanks Rune.
 $ [#21454] login module refers to non-existing. Thanks Michael
 $ Deleting redundant string

16-Jul-2010 Jean-Marie Simonet
 # Missing $user in banners and Newsfeed controllers
 # [#21378] Mootols (and possibly other js/css) not loading with cache on. Thanks Klas.
 # [#21434] *Robots list creates numeric values + metadata missing for articles
 # [#21357] Newsfeed categories - routing error with sef enabled. Thanks Mathavan.
 $ Deleting useless JText in grid
 # [#21437] Rename garbagecron.php to .txt.
 
16-Jul-2010 Andrew Eddie
 # Fixed issue [#20929] CategoriesControllerCategories Improvements (Omar Ramos).
 # Partially fixed issue [#20933] Banner, Contact, Newsfeed, and Weblink Controller Improvements (Omar Ramos).
 # Fixed issue [#21337] Framework: JControllerForm does not preserve form data on validation error (Anders Knutsson, Bill Richardson).

15-Jul-2010 Jean-Marie Simonet
 # [#21422] Content Category metadata not displayed 
 # [#21423] Enabling metadata for newsfeed, contacts, weblinks category
 # [#21417] Extra < in <script... tag
 # [#21426] * Enabling metadata for single contact
 
14-Jul-2010 Jean-Marie Simonet
 # [#21398] [Hathor] saveOrder should be $saveOrder. Thanks Viet.
 # [#21342] JDocumentRendererHead can generate empty meta description. Thanks Janich.
 # [#21374] Updates to Hathor that were not done when core was updated. Thanks Andrea and Michael.
 # [#21329] com_modules save-as-new with wrong icon
 $ [#21412] Untranslated strings: Default captions for JHtmlSelect::booleanlist. Thanks CY Lee
 # [#21401] Template beez20 Layout.css issue 
 # [#21415] Restoring deleted title in Hathor. Thanks Michael.

14-Jul-2010 Mark Dexter
# Sample data fixes (Elin Waring)